Restructured project, Added first blazor page

--- a/src/EasyLog/EasyLogService/Properties/launchSettings.json
+++ b/src/EasyLog/EasyLogService/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "commandLineArgs": "WatchDirectory=C:\\test\\deleteme\\logtest",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
