--- a/src/DirectoryWatcher/DirectoryWatcher.Test/DirectoryWatcher.Test.csproj
+++ b/src/DirectoryWatcher/DirectoryWatcher.Test/DirectoryWatcher.Test.csproj
@@ -1,9 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.14.4" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DirectoryWatcher\DirectoryWatcher.csproj" />
