--- a/src/EasyLog/EasyLogService/EasyLogService.csproj
+++ b/src/EasyLog/EasyLogService/EasyLogService.csproj
@@ -6,10 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="C5" Version="2.5.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\WatchedFileList\WatchedFileList.csproj" />
+    <ProjectReference Include="..\..\FileList\FileList\FileLists.csproj" />
   </ItemGroup>
 
 
