--- a/src/FileList/FileList/FileLists.csproj
+++ b/src/FileList/FileList/FileLists.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>FileListClasses</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WatchedFileList\WatchedFileList.csproj" />
+    <ProjectReference Include="..\..\DirectoryWatcher\DirectoryWatcher\DirectoryWatcher.csproj" />
   </ItemGroup>
 
 </Project>
