--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MaxLogLines" :  65536 // Maximum depth of all logs together in lines
 }
