Refactorings - moving endless file stream to a project, also LogEntries moved to a project. EndlessFileStream now used by default in Service. Rename FileList - Watcher File List

--- a/src/EasyLog/EasyLogService/EasyLogService.csproj
+++ b/src/EasyLog/EasyLogService/EasyLogService.csproj
@@ -10,7 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\FileList\FileList\FileLists.csproj" />
+    <ProjectReference Include="..\..\EndlessFileStream\EndlessFileStream.csproj" />
+    <ProjectReference Include="..\..\FileList\FileList\WatcherFileLists.csproj" />
+    <ProjectReference Include="..\..\LogEntries\LogEntries.csproj" />
   </ItemGroup>
 
   <ItemGroup>
