--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "MaxLogLines": 65536, // Maximum depth of all logs together in lines
   "MaxLogSimulatorLinesToReadFromEachFile": 1000, // Max log lines used when simulator reads from existing logs - specified for each file -1 = unlimited
-  "EnableLogSimulatorReadFromEachFile": true, // Max log lines used when simulator reads from existing logs - specified for each file
+  "EnableLogSimulatorReadFromEachFile": false, // Max log lines used when simulator reads from existing logs - specified for each file
   "LogSimulatorDirectory": "c:\\test\\logs", // Directory to read initially log files from
   "MaxLogQueryResultLines" :  100 // Specifies how many log lines will be returned by each search query request
 }
