--- a/src/EasyLog/EasylogService.Test/EasylogService.Test.csproj
+++ b/src/EasyLog/EasylogService.Test/EasylogService.Test.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\LogEntries\LogEntries.csproj" />
     <ProjectReference Include="..\EasyLogService\EasyLogService.csproj" />
   </ItemGroup>
 
