--- a/src/FileLibraries/FileArray/FileArray.Console/EndlessFileStream.Console.csproj
+++ b/src/FileLibraries/FileArray/FileArray.Console/EndlessFileStream.Console.csproj
@@ -7,4 +7,8 @@
     <AssemblyName>FileArrayConsole</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\EndlessFileStream\EndlessFileStream.csproj" />
+  </ItemGroup>
+
 </Project>
