Various refactorings - removed all necessary warnings (therefore many codechanges). Endless stream hash fixed - was using always the same before

--- a/src/EasyLog/EasyLogService/EasyLogService.csproj
+++ b/src/EasyLog/EasyLogService/EasyLogService.csproj
@@ -11,8 +11,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\EndlessFileStream\EndlessFileStream.csproj" />
-    <ProjectReference Include="..\..\FileList\FileList\WatcherFileLists.csproj" />
-    <ProjectReference Include="..\..\LogEntries\LogEntries.csproj" />
+    <ProjectReference Include="..\..\WatcherFileList\WatcherFileList\WatcherFileLists.csproj" />
+    <ProjectReference Include="..\..\LogEntries\LogEntries\LogEntries.csproj" />
   </ItemGroup>
 
   <ItemGroup>
