--- a/src/LogEntries/LogEntries.Test/LogEntries.Test.csproj
+++ b/src/LogEntries/LogEntries.Test/LogEntries.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\LogEntries\LogEntries\LogEntries.csproj" />
+    <ProjectReference Include="..\LogEntries\LogEntries.csproj" />
   </ItemGroup>
 
 </Project>
