--- a/src/DirectoryWatcher/DirectoryWatcher.Test/DirectoryWatcher.Test.csproj
+++ b/src/DirectoryWatcher/DirectoryWatcher.Test/DirectoryWatcher.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,9 +9,14 @@
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.14.4" />
     <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\LogEntries\LogEntries\LogEntries.csproj" />
     <ProjectReference Include="..\DirectoryWatcher\DirectoryWatcher.csproj" />
   </ItemGroup>
 
