--- a/src/WatcherFileList/WatcherFileList.Test/WatcherFileLists.Test.csproj
+++ b/src/WatcherFileList/WatcherFileList.Test/WatcherFileLists.Test.csproj
@@ -11,10 +11,14 @@
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.14.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FileList\WatcherFileLists.csproj" />
+    <ProjectReference Include="..\WatcherFileList\WatcherFileLists.csproj" />
   </ItemGroup>
 
 </Project>
