--- a/src/LoggingLibraries/EndlessFileStream/EndlessFileStream/EndlessFileStream.csproj
+++ b/src/LoggingLibraries/EndlessFileStream/EndlessFileStream/EndlessFileStream.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LogEntries\LogEntries\LogEntries.csproj" />
+    <ProjectReference Include="..\..\LogEntries\LogEntries\LogEntries.csproj" />
   </ItemGroup>
 
 </Project>
