Added spinner, rearranged checkboxes - added search button, activated to track also changes

--- a/src/EasyLog/EasyLogService/Properties/launchSettings.json
+++ b/src/EasyLog/EasyLogService/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "EasyLogService": {
       "commandName": "Project",
-      "commandLineArgs": "WatchDirectory=C:\\test\\deleteme\\logtest",
+      "commandLineArgs": "WatchDirectory=C:\\test\\logs",
       "launchBrowser": true,
       "launchUrl": "/",
       "environmentVariables": {
