--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -11,5 +11,7 @@
   "MaxLogSimulatorLinesToReadFromEachFile": 1000, // Max log lines used when simulator reads from existing logs - specified for each file -1 = unlimited
   "EnableLogSimulatorReadFromEachFile": false, // Max log lines used when simulator reads from existing logs - specified for each file
   "LogSimulatorDirectory": "c:\\test\\logs", // Directory to read initially log files from
-  "MaxLogQueryResultLines" :  100 // Specifies how many log lines will be returned by each search query request
+  "MaxLogQueryResultLines": 100, // Specifies how many log lines will be returned by each search query request
+  "WatchDirectory": "/var/log/containers", // Specifies location to watch for changes - points by default to Kubernetes default container logs directory
+  "EasyLogCentralLogDir":  "/var/log/easylog" // Location of the central log directory in which all logs will be combined to a single one
 }
