--- a/src/LoggingLibraries/DirectoryWatcher/DirectoryWatcher/DirectoryWatcher.csproj
+++ b/src/LoggingLibraries/DirectoryWatcher/DirectoryWatcher/DirectoryWatcher.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.6" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
+  </ItemGroup>
 
 </Project>
