--- a/src/LoggingLibraries/DirectoryWatcher/ManualFileSystemWatcher.Console/ManualFileSystemWatcher.Console.csproj
+++ b/src/LoggingLibraries/DirectoryWatcher/ManualFileSystemWatcher.Console/ManualFileSystemWatcher.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,6 +6,10 @@
     <AssemblyName>ManualFileSystemWatcher.Console</AssemblyName>
     <RootNamespace>ManualFileSystemWatcherConsole</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DirectoryWatcher\DirectoryWatcher.csproj" />
