Reverted to Physical file scan by default - using var/log/pods allows EasyLog to use files directly and not caring about links!

--- a/src/EasyLog/EasyLogService/Properties/launchSettings.json
+++ b/src/EasyLog/EasyLogService/Properties/launchSettings.json
@@ -11,7 +11,8 @@
   "profiles": {
     "EasyLogService": {
       "commandName": "Project",
-      "commandLineArgs": "WatchDirectory=C:\\test\\logs EasyLogCentralLogDir=C:\\test\\endless",
+      //"commandLineArgs": "WatchDirectory=C:\\test\\logs EasyLogCentralLogDir=C:\\test\\endless",
+      "commandLineArgs": "WatchDirectory=C:\\temp\\var\\log\\pods EasyLogCentralLogDir=C:\\test\\endless",
       "launchBrowser": true,
       "launchUrl": "/",
       "environmentVariables": {
