--- a/src/LoggingLibraries/WatcherFileList/WatcherFileList_TestOnly/WatcherFileList.Console.csproj
+++ b/src/LoggingLibraries/WatcherFileList/WatcherFileList_TestOnly/WatcherFileList.Console.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WatcherFileList\WatcherFileLists.csproj" />
   </ItemGroup>
 
