--- a/src/LoggingLibraries/WatcherFileList/WatcherFileList/WatcherFileLists.csproj
+++ b/src/LoggingLibraries/WatcherFileList/WatcherFileList/WatcherFileLists.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>WatcherFileListClasses</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
   </ItemGroup>
