--- a/src/LoggingLibraries/WatcherFileList/WatcherFileList_TestOnly/WatcherFileList.Console.csproj
+++ b/src/LoggingLibraries/WatcherFileList/WatcherFileList_TestOnly/WatcherFileList.Console.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WatcherFileList.Test\WatcherFileLists.Test.csproj" />
     <ProjectReference Include="..\WatcherFileList\WatcherFileLists.csproj" />
   </ItemGroup>
 
