First operating version of backwards reading

--- a/src/LoggingLibraries/EndlessFileStream/EndlessFileStream/EndlessFileStream.csproj
+++ b/src/LoggingLibraries/EndlessFileStream/EndlessFileStream/EndlessFileStream.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\FileTools\FileTools\FileTools.csproj" />
     <ProjectReference Include="..\..\LogEntries\LogEntries\LogEntries.csproj" />
   </ItemGroup>
 
