Changed content length of string (multiple lines) to be passed for each scan to 256000 bytes

--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -22,8 +22,9 @@
   },
   "FileDirectoryWatcherSettings": {
     "ScanDirectory": "/var/log/containers", // Specifies location to watch for changes - points by default to Kubernetes default container logs directory
-    "ScanIntervalInSeconds": 10, 
-    "UseManualScan":  true
+    "ScanIntervalInSeconds": 10,
+    "UseManualScan": true,
+    "MaxContentLenghtToForwardForEachScanInBytes":  256000
   }
 
 
