Some rearchitectures - first version passing reliably all logs. Still missing -> multi file read - backwards does not work as expected

--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      //      "Default": "Information",
-      "Default": "Trace",
-      "Microsoft": "Trace",
+        //    "Default": "Information",
+      //"Default": "Trace",
+      //"Microsoft": "Trace",
       //      "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
@@ -24,7 +24,7 @@
     "ScanDirectory": "/var/log/containers", // Specifies location to watch for changes - points by default to Kubernetes default container logs directory
     "ScanIntervalInSeconds": 10,
     "UseManualScan": true,
-    "MaxContentLenghtToForwardForEachScanInBytes":  7000
+    "MaxContentLenghtToForwardForEachScanInBytes":  65536
   }
 
 
