Smaller refactorings, switched ordering of filelist to read from newest file first

--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -17,8 +17,9 @@
   //"WatchDirectory": "/var/log/containers", // Specifies location to watch for changes - points by default to Kubernetes default container logs directory
   //"EasyLogCentralLogDir": "/var/log/easylog", // Location of the central log directory in which all logs will be combined to a single one
   "CentralLogServiceCacheSettings": {
-    "CentralMasterLogDirectory": "/var/log/easylog", 
-    "MaxLogFileSizeInMByte": 1024
+    "CentralMasterLogDirectory": "/var/log/easylog",
+    "MaxLogFileSizeInMByte": 1024,
+    "FlushWrite":  true // If set will flush files after each write
   },
   "FileDirectoryWatcherSettings": {
     "ScanDirectory": "/var/log/containers", // Specifies location to watch for changes - points by default to Kubernetes default container logs directory
