Added dockerfile, certificate yaml for deployment - running now in Kubernetes

--- a/src/EasyLog/EasyLogService/Properties/launchSettings.json
+++ b/src/EasyLog/EasyLogService/Properties/launchSettings.json
@@ -11,14 +11,21 @@
   "profiles": {
     "EasyLogService": {
       "commandName": "Project",
-      //"commandLineArgs": "WatchDirectory=C:\\test\\logs EasyLogCentralLogDir=C:\\test\\endless",
-      "commandLineArgs": "FileDirectoryWatcherSettings:ScanDirectory=C:\\temp\\var\\log\\pods CentralLogServiceCacheSettings:CentralMasterLogDirectory=C:\\test\\endless",
+      "commandLineArgs": "FileDirectoryWatcherSettings:ScanDirectory=C:\\temp\\var\\log\\pods CentralLogServiceCacheSettings:CentralMasterLogDirectory=C:\\test\\endless ",
       "launchBrowser": true,
-      "launchUrl": "/",
+      "launchUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001"
+      "applicationUrl": "https://localhost:5001",
+      "useSSL": true
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
