--- a/src/EasyLog/EasyLogService/EasyLogService.csproj
+++ b/src/EasyLog/EasyLogService/EasyLogService.csproj
@@ -11,10 +11,14 @@
     <PackageProjectUrl>https://github.com/AndreKfm/easylog</PackageProjectUrl>
     <RepositoryUrl>https://github.com/AndreKfm/easylog</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <UserSecretsId>b6454788-69b5-4606-bdf6-b368f64fcb51</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="C5" Version="2.5.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
 
@@ -23,8 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\LoggingLibraries\EndlessFileStream\EndlessFileStream\EndlessFileStream.csproj" />
-    <ProjectReference Include="..\..\LoggingLibraries\WatcherFileList\WatcherFileList\WatcherFileLists.csproj" />
+    <ProjectReference Include="..\LoggingLibraries\EndlessFileStream\EndlessFileStream\EndlessFileStream.csproj" />
+    <ProjectReference Include="..\LoggingLibraries\WatcherFileList\WatcherFileList\WatcherFileLists.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,6 +44,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Cert\localhost.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
