Changes pod to deployment

--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-        //    "Default": "Information",
+      //    "Default": "Information",
       //"Default": "Trace",
       //"Microsoft": "Trace",
-      //      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Warning",
+      "Default": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
   "AllowedHosts": "*",
