--- a/src/EasyLog/EasyLogService/appsettings.json
+++ b/src/EasyLog/EasyLogService/appsettings.json
@@ -1,13 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      //    "Default": "Information",
-      //"Default": "Trace",
-      //"Microsoft": "Trace",
-      "Microsoft": "Warning",
       "Default": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning"
-    }
+      "System": "Warning",
+      "Microsoft": "Error",
+      "Microsoft.Hosting.Lifetime": "Error"
+    },
+
+    "EnableConsoleTracing":  false
   },
   "AllowedHosts": "*",
   "MaxLogSimulatorLinesToReadFromEachFile": 1000, // Max log lines used when simulator reads from existing logs - specified for each file -1 = unlimited
