--- a/src/EasyKubeLog/EasyKubeLogService/EasyKubeLogService.csproj
+++ b/src/EasyKubeLog/EasyKubeLogService/EasyKubeLogService.csproj
@@ -19,6 +19,8 @@
 
   <ItemGroup>
     <PackageReference Include="C5" Version="2.5.3" />
+    <PackageReference Include="EmbeddedBlazorContent" Version="1.10.0" />
+    <PackageReference Include="MatBlazor" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
