--- a/src/EasyKubeLog/EasyKubeLogService/EasyKubeLogService.csproj
+++ b/src/EasyKubeLog/EasyKubeLogService/EasyKubeLogService.csproj
@@ -15,6 +15,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <OutputType>Exe</OutputType>
     <ServerGarbageCollection>false</ServerGarbageCollection>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
