--- a/src/EasyKubeLog/LoggingLibraries/EndlessFileStream/EndlessFileStream.Console/EndlessFileStream.Console.csproj
+++ b/src/EasyKubeLog/LoggingLibraries/EndlessFileStream/EndlessFileStream.Console/EndlessFileStream.Console.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>FileArrayConsole</RootNamespace>
     <AssemblyName>FileArrayConsole</AssemblyName>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
