--- a/src/EasyKubeLogDDD/bct/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
+++ b/src/EasyKubeLogDDD/bct/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\SharedKernel.csproj" />
+  </ItemGroup>
 
 </Project>
