--- a/src/EasyKubeLog/LogSimulator.Console/LogSimulator.Console.csproj
+++ b/src/EasyKubeLog/LogSimulator.Console/LogSimulator.Console.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>LogSimulator</RootNamespace>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
 </Project>
