--- a/src/EasyKubeLog/LoggingLibraries/EndlessFileStream/EndlessFileStream.Test/EndlessFileStream.Test.csproj
+++ b/src/EasyKubeLog/LoggingLibraries/EndlessFileStream/EndlessFileStream.Test/EndlessFileStream.Test.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>EndlessFileStreamClasses.Test</RootNamespace>
+
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
