--- a/src/EasyKubeLog/LoggingLibraries/FileTools/FileTools/FileTools.csproj
+++ b/src/EasyKubeLog/LoggingLibraries/FileTools/FileTools/FileTools.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>FileToolsClasses</RootNamespace>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
 </Project>
