--- a/src/EasyKubeLog/LoggingLibraries/WatcherFileList/WatcherFileList.Test/WatcherFileLists.Test.csproj
+++ b/src/EasyKubeLog/LoggingLibraries/WatcherFileList/WatcherFileList.Test/WatcherFileLists.Test.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>WatcherFileListClasses.Test</RootNamespace>
+
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
