--- a/src/EasyKubeLog/LoggingLibraries/WatcherFileList/WatcherFileList/WatcherFileLists.csproj
+++ b/src/EasyKubeLog/LoggingLibraries/WatcherFileList/WatcherFileList/WatcherFileLists.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>WatcherFileListClasses</RootNamespace>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
