--- a/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Api/Scanner.Api.csproj
+++ b/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Api/Scanner.Api.csproj
@@ -6,4 +6,8 @@
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Scanner.Domain\Scanner.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
