--- a/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
+++ b/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
@@ -4,6 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
