--- a/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Main.Cli/Scanner.Main.Cli.csproj
+++ b/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Main.Cli/Scanner.Main.Cli.csproj
@@ -1,14 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>9.0</LangVersion>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Scanner.Domain\Scanner.Domain.csproj" />
+    <ProjectReference Include="..\Scanner.Infrastructure\Scanner.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
