Added physical file scanner to DDD version

--- a/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
+++ b/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\EasyKubeLog\LoggingLibraries\DirectoryWatcher\DirectoryWatcher\DirectoryWatcher.csproj" />
     <ProjectReference Include="..\..\..\Shared\SharedKernel.csproj" />
   </ItemGroup>
 
