--- a/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Infrastructure/Scanner.Infrastructure.csproj
+++ b/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Infrastructure/Scanner.Infrastructure.csproj
@@ -1,11 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Scanner.Domain\Scanner.Domain.csproj" />
