--- a/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Infrastructure/Scanner.Infrastructure.csproj
+++ b/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Infrastructure/Scanner.Infrastructure.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
+    <PackageReference Include="Moq" Version="4.14.4" />
   </ItemGroup>
 
   <ItemGroup>
