--- a/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
+++ b/src/EasyKubeLogDDD/services/Scanner/src/Scanner.Domain/Scanner.Domain.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-rc.2.20475.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\SharedKernel.csproj" />
   </ItemGroup>
 
